# openapi

./: .drom  Makefile  OpenAPI.opam  README.md  drom.toml  dune-project  index.html  openapi.opam
_drom/: header.ml  header.mly  known-licences.txt  known-skeletons.txt  maximum-skip-field.txt  opam.current  opam.deps  openapi-deps.opam
_drom/skipped/: README.md  dune-project  openapi.opam  openapi_lib.opam
_drom/skipped/.github/workflows/: doc-deploy.yml  workflow.yml
_drom/skipped/docs/sphinx/: index.html
_drom/skipped/sphinx/: conf.py  index.rst
_drom/skipped/src/openapi/: dune  index.mld  main.ml
_drom/skipped/src/openapi_lib/: dune  index.mld  main.ml
_drom/skipped/test/inline-tests/: dune
_drom/skipped/test/output-tests/: dune
doc/: index.html
doc/OpenAPI/: index.html
doc/openapi/: index.html
doc/openapi/OpenAPI/: index.html
doc/openapi/OpenAPI/Callback/: index.html
doc/openapi/OpenAPI/Components/: index.html
doc/openapi/OpenAPI/Contact/: index.html
doc/openapi/OpenAPI/Encoding/: index.html
doc/openapi/OpenAPI/Example/: index.html
doc/openapi_lib/: index.html
docs/: index.html
docs/doc/: index.html
lib/: dune  openapi.ml  openapi.mli
sphinx/: .buildinfo  about.html  about.rst  genindex.html  index.html  index.rst  install.html  license.html  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: about.doctree  environment.pickle  index.doctree  install.doctree  license.doctree
sphinx/_sources/: install.rst.txt
sphinx/_static/: documentation_options.js
src/openapi/: dune  package.toml
test/expect-tests/: dune
(+22 files in other folders)
